# chlaus-cpp-template

./: CMakeLists.txt
.devcontainer/: devcontainer.json
include/: chlaus-cpp-template.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  CmakeLists.txt  tests.cpp
